updated website with stripe popup

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "url": "git://github.com/geraldfong/svprep.git"
   },
   "dependencies": {
+    "ejs": "*",
+    "express": "2.x",
     "mongodb": "*",
     "mailgun": "*"
   },
